<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="61dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtnewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/new_items"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newitems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtnewItems"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txtpopularItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newitems"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/popular_items"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/populitems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularItems"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txtseggestedItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/populitems"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/suggested_items"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggesteditems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtseggestedItems"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp" />


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />




</RelativeLayout>