<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Grocery_item_activity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/design_default_color_primary"
        android:elevation="4dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/btnaddtocart"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnaddtocart"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/firstreletivelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="20$"
                    android:textColor="#384D8C"
                    android:textStyle="italic" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/itemimg"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_below="@id/firstreletivelayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/star_layout"
                android:layout_below="@id/itemimg"
                android:layout_marginTop="5dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firststarrellayout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstfilledstar"
                        android:src="@drawable/ic_action_filled_star"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/firstemptystar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_empty_star" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/firststarrellayout"
                    android:id="@+id/secondstarrellayout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondfilledstar"
                        android:src="@drawable/ic_action_filled_star"
                        android:visibility="gone"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondtemptystar"
                        android:src="@drawable/ic_action_empty_star"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/thirdstarrellayout"
                    android:layout_toEndOf="@+id/secondstarrellayout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/thirdfilledstar"
                        android:src="@drawable/ic_action_filled_star"
                        android:visibility="gone"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/thirdemptystar"
                        android:src="@drawable/ic_action_empty_star"/>

                </RelativeLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/star_layout"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:lineSpacingExtra="3dp"
                android:textStyle="italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_layoput"
                android:layout_below="@+id/txtdescription"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtReviews"
                    android:textStyle="bold"
                    android:text="@string/reviews"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtaddreview"
                    android:layout_height="wrap_content"
                    android:text="(Add a Review)"
                    android:layout_toEndOf="@id/txtReviews"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="italic"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/review_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtReviews"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>